--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<script src="https://extension-files.twitch.tv/helper/v1/twitch-ext.min.js"></script>
 		<script src="third_party/jquery-3.2.1.slim.min.js"></script>
 
 		<link rel="stylesheet" href="third_party/bootstrap.min.css">
