frontend work basically done

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,17 +31,19 @@
 				</div>
 			</div>
 		</div>
-
+		<div id="alert-area-global"></div>
 		<div id="landing">
 			<div class="wrapper fadeInDown">
 				<div id="formContent">
 					<div class="fadeIn first">
 						<img id="profile_picture" src="assets/profile_picture_300.png" id="icon" width="75" />
 					</div>
+					<hr>
 					<div id="loading-spinner" class="spinner-border text-secondary" role="status" style="display: none;">
 						<span class="sr-only">Loading...</span>
 					</div>
-					<input id="login-button" type="submit" class="fadeIn fourth" value="Login" onclick="initializeConnector();">
+					<hr>
+					<input id="login-button" type="submit" class="fadeIn fourth" value="Login">
 				</div>
 			</div>
 		</div>
@@ -114,9 +116,9 @@
 							  </tr>
 							</tbody>
 						  </table>
-						  <button id="pagination_prev" type="button" class="btn btn-xs btn-info disabled" disabled onclick="getPrevActions();">Previous</button>
-						  <button id="refresh_ui" type="button" class="btn btn-xs btn-primary" onclick="refresh();">Refresh</button>
-						  <button id="pagination_next" type="button" class="btn btn-xs btn-info" onclick="getNextActions();">Next</button>
+						  <button id="pagination_prev" type="button" class="btn btn-xs btn-info disabled" disabled>Previous</button>
+						  <button id="refresh_ui" type="button" class="btn btn-xs btn-primary">Refresh</button>
+						  <button id="pagination_next" type="button" class="btn btn-xs btn-info">Next</button>
 					  </div>
 				</div>
 			</div>
