pass token to server for use in getting user data server side

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -73,7 +73,7 @@
 						<a id="ext_title" class="navbar-brand" href="#" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false">
 							Game Integrations
 						</a>
-						<a href="#" data-toggle="collapse" data-target="#navbarSupportedContent"><img class="rounded-circle" src="https://static-cdn.jtvnw.net/jtv_user_pictures/swiftyspiffy-profile_image-a2ba67caa9635d4b-300x300.png" width="30" height="30" class="d-inline-block align-top"></a>
+						<a href="#" data-toggle="collapse" data-target="#navbarSupportedContent"><img class="rounded-circle" id="user_profile_picture" src="" width="30" height="30" class="d-inline-block align-top"></a>
 						
 						<div class="collapse navbar-collapse" id="navbarSupportedContent">
 							<ul class="navbar-nav mr-auto">
